gitlab/template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  gitlab
  namespace: gitlab
  labels:
    app:  gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  replicas: 1
  template:
    metadata:
      labels:
        app:  gitlab
    spec:
      containers:
      - name:  gitlab
        image: gitlab/gitlab-ee:16.8.4-ee.0
        ports:
        - containerPort: 80
          name:  http
        - containerPort: 443
          name: https
        - containerPort: 22
          name: ssh
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Taipei

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - name: http
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - gitlab.relationc.com
      secretName: gitlab-ssl
  rules:
    - host: gitlab.relationc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
